【优化】支持登陆用户，直接读取昵称、部门等信息，也支持自定义字段