@@ -5,6 +5,7 @@ import cn.iocoder.yudao.framework.security.core.LoginUser;
 import cn.iocoder.yudao.framework.security.core.util.SecurityFrameworkUtils;
 import feign.RequestInterceptor;
 import feign.RequestTemplate;
+import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 
 import java.net.URLEncoder;
@@ -19,6 +20,7 @@ import java.nio.charset.StandardCharsets;
 public class LoginUserRequestInterceptor implements RequestInterceptor {
 
     @Override
+    @SneakyThrows
     public void apply(RequestTemplate requestTemplate) {
         LoginUser user = SecurityFrameworkUtils.getLoginUser();
         if (user == null) {
@@ -26,7 +28,7 @@ public class LoginUserRequestInterceptor implements RequestInterceptor {
         }
         try {
             String userStr = JsonUtils.toJsonString(user);
-            userStr = URLEncoder.encode(userStr, StandardCharsets.UTF_8); // 编码，避免中文乱码
+            userStr = URLEncoder.encode(userStr, StandardCharsets.UTF_8.name()); // 编码，避免中文乱码
             requestTemplate.header(SecurityFrameworkUtils.LOGIN_USER_HEADER, userStr);
         } catch (Exception ex) {
             log.error("[apply][序列化 LoginUser({}) 发生异常]", user, ex);
